--- a/scr/styles.css
+++ b/scr/styles.css
@@ -6,6 +6,5 @@ h1 {
   color: cornflowerblue;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  display: block;
-  margin: 0 auto;
+  text-align: center;
 }
