--- a/scr/styles.css
+++ b/scr/styles.css
@@ -8,3 +8,8 @@ h1 {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   text-align: center;
 }
+.a {
+  display: block;
+  margin: 0 auto;
+  width: 400;
+}
